# pytorch-neat

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  acrobot_run.py  chess_run.py  classification.py  ensemble-wise_genome_fitness.py  env.yml  mnist.py  mountain_climb_run.py  pole_double_run.py  pole_run.py  pyproject.toml  requirements.txt  run.py  run.sh  setup.py  test.py  xor_run.py
.github/ISSUE_TEMPLATE/: bug_report.md
images/: pole-balancing-solution
neat/: __init__.py  activations.py  crossover.py  mutation.py  neat.py  population.py  species.py  utils.py  visualize.py
neat/analysis/: __init__.py  algorithms.py  wrapper.py
neat/experiments/MNIST/: config.py  mnist.py
neat/experiments/UCI/: config.py  kwargs.py
neat/experiments/acrobot_balancing/: config.py
neat/experiments/chess/: config.py
neat/experiments/mountain_climbing/: config.py  mountain_climb_run.py
neat/experiments/pole_balancing/: config.py
neat/experiments/pole_double_balancing/: config.py
neat/experiments/template/: DEFAULT_KWARGS.py  config.py  default_kwarg  default_kwargs.py  main.py  template.py
neat/experiments/xor/: config.py  xor_run.py
neat/genotype/: connection_gene.py  genome.py  node_gene.py
neat/phenotype/: ensemble_feed_forward.py  feed_forward.py
v1/: neat.py  species.py  visualize.py
v1/experiments/: xor.py
v1/experiments/mountain_climbing/: config.py
v1/experiments/pole_balancing/: config.py
v1/genotype/: connection_gene.py  genome.py  node_gene.py
v1/phenotype/: feed_forward.py
v1/xor/: config.py  xor.py
(+1 files in other folders)
